@@ -9,6 +9,7 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.release>15</maven.compiler.release>
 		<lwjgl.version>3.2.4-SNAPSHOT</lwjgl.version>
 		<joml.version>1.9.15</joml.version>
@@ -24,6 +25,14 @@
 				<configuration>
 					<release>${maven.compiler.release}</release>
 					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
